# pan-dengue-binder

./: 1OAN.cif  LICENSE  README.md  core_alignment_engine.py  extract_3d_target.py  fetch_dengue.py  find_conserved_target.py  parse_to_mpnn.py  pyproject.toml  rcsb_pdb_1OAN.fasta  run_rfdiffusion_wrapper.py
.pi/skills/biomedicine-expert/: SKILL.md
.pi/skills/biomedicine-expert/references/: dengue-project-roadmap-template.md
config/: default.yaml
docs/: abbreviations.md  biomedical_roadmap.md  implementation_plan.md
outputs/phase0/build-alignment/: run_metadata.json
outputs/phase0/build-target-atlas/: run_metadata.json
outputs/phase0/design-backbones/: run_metadata.json
outputs/phase0/design-sequences/: run_metadata.json
outputs/phase0/fetch-sequences/: run_metadata.json
outputs/phase0/predict-complexes/: run_metadata.json
outputs/phase0/prepare-structure/: run_metadata.json
outputs/phase0/score-candidates/: run_metadata.json
reports/: phase0_status.md
src/pandengue/: __init__.py  alignments.py  cli.py  config.py  conservation.py  epitope_atlas.py  metadata.py  proteinmpnn.py  reporting.py  rfdiffusion.py  sequences.py  structures.py
tests/: test_phase0.py  test_phase1_sequences.py  test_phase2_alignments.py  test_phase4_epitope_atlas.py
